# Cloud-Edge-AI-Co-Simulation-Optimizer

./: .gitignore  .structure-index  EDGETWIN_MCP_TOOLS.md  Makefile  PROJECT_STRUCTURE.md  README.md  STRUCTURE_QUICK_REFERENCE.md  package-lock.json  pyproject.toml  raindrop.manifest  test_mcp.py  test_mcp.sh  test_server.py  upload_logs.py  upload_logs.sh
configs/: constraints.yaml  defaults.yaml  jetson_devices.yaml  optimization.yaml
data/jetbenchdb/: boards.yaml  power_measurements_template.csv  profiles_local.csv  spec_curves.csv
docs/: ARCHITECTURE.md  ARCHITECTURE_COMPLIANCE.md  CALIBRATION_DATA_ANALYSIS.md  COMPLETE_CHECKLIST.md  GETTING_STARTED_BACKEND_ML.md  IMPLEMENTATION_SUMMARY.md  PIPELINE_PROFILER_IMPLEMENTATION.md  POWER_MODEL_ANALYSIS.md  QUANTIZATION_EXPLAINED.md  REPOSITORY_REVIEW.md  WORKFLOW.md
examples/: backend_ml_example.py  test_profiler.py  workflow_with_sample_data.py
mcp_servers/jetson_logs_server/: __init__.py  requirements.txt  server.py
src/adapters/: __init__.py  isaac_sim_adapter.py  jetson_adapter.py
src/apps/: __init__.py
src/apps/api/: __init__.py  schemas.py  server.py
src/apps/cli/: __init__.py  data_commands.py  main.py
src/apps/web/: __init__.py  streamlit_app.py
src/core/: __init__.py
src/core/cosim/: __init__.py  env_base.py  env_toy.py  loop.py  metrics.py  workload.py
src/core/optimize/: __init__.py  knobs.py  model_converter.py  search.py
src/core/plan/: __init__.py  reporter.py
src/core/predict/: __init__.py  features.py  latency_rule.py  power.py  power_models.py  (+2 more)
src/jetson-logs/: index.test.ts  index.ts  raindrop.gen.ts
tests/: __init__.py
tests/e2e/: test_full_flow.py
tests/unit/: test_predict_monotonic.py
(+5 files in other folders)
